test/programs/invalid_programs/syntax/no_end_methods.jm
#!SyntaxError

def foo(i:String) -> String
  v = i
  puts(v)
  return i
